--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -1,33 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<AbsoluteLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WeatherForecast">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/current_weather"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_x="104dp"
+        android:layout_y="148dp">
+
+    </ImageView>
+
+    <TextView
+        android:id="@+id/current_temp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_x="209dp"
+        android:layout_y="345dp"
+        android:text="@string/temp"
+        android:textSize="16dp">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/min_temp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_x="210dp"
+        android:layout_y="397dp"
+        android:text="@string/min">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/max_temp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_x="209dp"
+        android:layout_y="449dp"
+        android:text="@string/max">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/city_name"
+        android:layout_width="317dp"
+        android:layout_height="61dp"
+        android:layout_x="55dp"
+        android:layout_y="30dp"
+        android:textSize="32dp"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <ProgressBar
+        android:id="@+id/pb"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="333dp"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_x="44dp"
+        android:layout_y="536dp"
+        android:visibility="invisible" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="323dp"
+        android:layout_height="wrap_content"
+        android:layout_x="51dp"
+        android:layout_y="100dp" />
 
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <include layout="@layout/content_weather_forecast" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+    <TextView
+        android:id="@+id/temp_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_x="48dp"
+        android:layout_y="345dp"
+        android:text="Current Temperature:"
+        android:textStyle="bold"
+        android:textSize="16dp"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <TextView
+        android:id="@+id/min_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="48dp"
+        android:layout_y="400dp"
+        android:text="Min Temperature:"
+        android:textSize="16dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/max_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="50dp"
+        android:layout_y="454dp"
+        android:text="Max Temperature:"
+        android:textSize="16dp"
+        android:textStyle="bold" />
+
+</AbsoluteLayout>
