Finished Assignment3Part2

--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,21 +10,19 @@
         android:id="@+id/current_weather"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_x="104dp"
-        android:layout_y="148dp">
-
-    </ImageView>
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/spinner"
+        android:contentDescription="@string/weather_text"/>
 
     <TextView
         android:id="@+id/current_temp"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_x="209dp"
-        android:layout_y="345dp"
+        android:layout_below="@id/current_weather"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@id/temp_text"
         android:text="@string/temp"
-        android:textSize="16dp">
+        android:textSize="16sp">
 
     </TextView>
 
@@ -32,8 +30,9 @@
         android:id="@+id/min_temp"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_x="210dp"
-        android:layout_y="397dp"
+        android:layout_below="@id/temp_text"
+        android:layout_marginStart="52dp"
+        android:layout_toEndOf="@id/min_text"
         android:text="@string/min">
 
     </TextView>
@@ -42,8 +41,10 @@
         android:id="@+id/max_temp"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_x="209dp"
-        android:layout_y="449dp"
+        android:layout_below="@id/min_text"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="5dp"
+        android:layout_toEndOf="@id/max_text"
         android:text="@string/max">
 
     </TextView>
@@ -52,10 +53,11 @@
         android:id="@+id/city_name"
         android:layout_width="317dp"
         android:layout_height="61dp"
-        android:layout_x="55dp"
-        android:layout_y="30dp"
-        android:textSize="32dp"
-        android:textStyle="bold">
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="27dp"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true">
 
     </TextView>
 
@@ -64,45 +66,48 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="333dp"
         android:layout_height="wrap_content"
-        android:layout_x="44dp"
-        android:layout_y="536dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:visibility="invisible" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="323dp"
         android:layout_height="wrap_content"
-        android:layout_x="51dp"
-        android:layout_y="100dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/city_name" />
 
     <TextView
         android:id="@+id/temp_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_x="48dp"
-        android:layout_y="345dp"
-        android:text="Current Temperature:"
+        android:layout_below="@id/current_weather"
+        android:layout_marginTop="3dp"
+        android:text="@string/current_temperature"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:textSize="16dp"/>
+        android:layout_marginBottom="100dp"
+        android:layout_marginStart="50dp"/>
 
     <TextView
         android:id="@+id/min_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_x="48dp"
-        android:layout_y="400dp"
-        android:text="Min Temperature:"
-        android:textSize="16dp"
+        android:layout_below="@id/temp_text"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="100dp"
+        android:text="@string/min_temperature"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/max_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_x="50dp"
-        android:layout_y="454dp"
-        android:text="Max Temperature:"
-        android:textSize="16dp"
-        android:textStyle="bold" />
+        android:text="@string/max_temperature"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_marginStart="50dp"
+        android:layout_below="@id/min_text"/>
 
-</AbsoluteLayout>
+</RelativeLayout>
